Super estilizado o seu CSS.
Nessa aula, você aprendeu como:
Utilizar as cores no CSS;
Utilizar as cores hexadecimais no CSS;
Utilizar paleta de cores de terceiros;
Alterar as cores de fundo e dos textos;
Extrair a cor do Figma para utilizar no CSS;
Destacar o texto e alterar a cor do texto em destaque.

--- a/HTML/style.css
+++ b/HTML/style.css
@@ -1,4 +1,8 @@
 body{
-    background-color:  black;
-    color: white;
+    background-color:#000000;
+    color:#ffffff;
+}
+
+strong{
+    color:#7ED957;
 }
