--- a/HTML/style.css
+++ b/HTML/style.css
@@ -1,8 +1,13 @@
+*{
+    margin: 0;
+    padding: 0;
+}
+
 body{
     background-color:#000000;
     color:#ffffff;
 }
 
-strong{
+.titulo-destaque{
     color:#7ED957;
 }
