Posicionando mais elementos
Nessa aula, você aprendeu:
Padrões de projetos CSS com height e box-sizing;
Unidade Viewport;
Hierarquia entre elementos pai e filho;
Formas e parâmetros de posicionamento;
Flexbox.

--- a/HTML/style.css
+++ b/HTML/style.css
@@ -4,10 +4,22 @@
 }
 
 body{
+    height: 100vh;
+    box-sizing: border-box;
     background-color:#000000;
     color:#ffffff;
 }
 
 .titulo-destaque{
     color:#7ED957;
+}
+
+.titulo-foto{
+    height: 500px;
+    width: 400px;
+}
+
+.apresentacao{
+    display: flex;
+    align-items: center;
 }
