Adicionando box-shadow à foto.
Foram adicionados 2 box-shadow a foto. Um na cor preta e outra na cor verde.

--- a/HTML/style.css
+++ b/HTML/style.css
@@ -15,9 +15,12 @@ body{
     color:#7ED957;    
 }
 
-.titulo-foto{
+.apresentacao__foto{
     height: 500px;
     width: 400px;
+    border-radius: 10px;
+    box-shadow: #000000 15px -15px 0px -3px, #7ED957 15px -15px;
+  
 }
 
 .apresentacao{
