--- a/HTML/style.css
+++ b/HTML/style.css
@@ -63,6 +63,9 @@ body{
 }
 
 .apresentacao__links__link{
+    display: flex;
+    justify-content: center;
+    gap: 16px;
     border: 2px solid #7ED957;    
     width: 378px;
     text-align: center;
@@ -72,7 +75,14 @@ body{
     text-decoration: none;
     color: #f6f6f6;
     font-family: 'Montserrat', sans-serif;
-    font-weight: 600;
-    
+    font-weight: 600;     
 }
+
+.apresentacao__links__link:hover, :active{ 
+    background-color: #272727;
+    font-size: 100%;  
+
+}
+
+
 
