--- a/HTML/styles/style.css
+++ b/HTML/styles/style.css
@@ -1,54 +1,63 @@
 @import url('https://fonts.googleapis.com/css2?family=Krona+One&family=Montserrat:wght@400;600&display=swap');
-*{
+
+* {
     margin: 0;
     padding: 0;
 }
 
-body{
+body {
     /* height: 100vh; */
     box-sizing: border-box;
-    background-color:#000000;
-    color:#ffffff;
+    background-color: #000000;
+    color: #ffffff;
 }
 
-.apresentacao__conteudo__titulo__destaque{
-    color:#7ED957;    
+.cabecalho {
+    padding: 2% 0% 0% 15%;
 }
 
-.apresentacao__foto{
-    height: 500px;
-    width: 400px;
-    border-radius: 10px;
-    box-shadow: #000000 15px -15px 0px -3px, #7ED957 15px -15px;
-  
+.cabecalho__menu {
+    display: flex;
+    gap: 80px;
 }
 
-.apresentacao{
-    padding: 8% 15%;
+.cabecalho__menu__link {
+    font-family: 'Montserrat', sans-serif;
+    font-size: 24px;
+    font-weight: 600;
+    color: #7ED957;
+    text-decoration: none;
+}
+
+.apresentacao {
+    padding: 5% 15%;
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
 
-.apresentacao__conteudo{
+.apresentacao__conteudo {
     width: 615px;
     display: flex;
     flex-direction: column;
     gap: 40px;
-
 }
 
-.apresentacao__conteudo__titulo{
+.apresentacao__conteudo__titulo {
     font-size: 36px;
     font-family: 'Krona One', sans-serif;
 }
 
-.apresentacao__conteudo__texto{
+.apresentacao__conteudo__titulo__destaque {
+    color: #7ED957;
+}
+
+.apresentacao__conteudo__texto {
     font-size: 24px;
     font-family: 'Montserrat', sans-serif;
 }
 
-.apresentacao__links{
+.apresentacao__links {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -56,17 +65,17 @@ body{
     gap: 32px;
 }
 
-.apresentacao__links__subtitulos{
+.apresentacao__links__subtitulos {
     font-family: 'krona One', sans-serif;
     font-weight: 400;
     font-size: 24px;
 }
 
-.apresentacao__links__link{
+.apresentacao__links__link {
     display: flex;
     justify-content: center;
     gap: 16px;
-    border: 2px solid #7ED957;    
+    border: 2px solid #7ED957;
     width: 378px;
     text-align: center;
     border-radius: 8px;
@@ -75,23 +84,26 @@ body{
     text-decoration: none;
     color: #f6f6f6;
     font-family: 'Montserrat', sans-serif;
-    font-weight: 600;     
+    font-weight: 600;
 }
 
-.apresentacao__links__link:hover, :active{ 
+.apresentacao__links__link:hover {
     background-color: #272727;
-
 }
 
-.rodape{
+.apresentacao__foto {
+    height: 500px;
+    width: 400px;
+    border-radius: 10px;
+    box-shadow: #000000 15px -15px 0px -3px, #7ED957 15px -15px;
+}
+
+.rodape {
     color: #000000;
-    background-color: #7ED957; 
+    background-color: #7ED957;
     padding: 24px;
     text-align: center;
     font-family: 'Montserrat', sans-serif;
     font-size: 24px;
     font-weight: 400;
 }
-
-
-
